- [BUG FIX] Fix Soft Delete function when using FileMaker Server. The affected versions are 5.5, 5.6 and 5.7.
- [BUG FIX] Fix an error when using the 'field-group' key and FileMaker Server. The affected version is 5.7.
- [BUG FIX] INTERMediatorLib.getParentRepeaters works in case of parameter node isn't target node.

Ver.5.7 (March 29, 2018)
- The "data-im-format" attribute is introduced.
  Please see for detail: <http://inter-mediator.info/ja/for-developers/format.html> (Japanese)
- Microsoft SQL Server is contained in INTER-Mediator support database.
- Support PHP 7.2.
- Start to support FileMaker Data API (Trial) of FileMaker Server 16 as an experimental feature.
- Add FMDataAPI.php (FMDataAPI Ver.6) in "lib" directory for FileMaker Data API (Trial).
- Step navigation is introduced. The 'nav-control' key can have values 'step' and 'step-hide'.
- data-im-widget="popupselector" is introduced. This is similar to popup menu. The selections shows on
  scrollable panel.
- Mr. Motofumi Iijima is added as a contributor. He published contents for novices with Qiita document and
  YouTube movies.
- Database classes are widely refactored. So they had too much long codes, they are divided into some classes
  in DB_Support directory.
- The Data_Converter directory in the root of repository is for storing data converter classes.
- The locale for number and currency format follows the server-side setting of "intl.default_locale" key in php.ini.
  It can be overridden by params.php file's $appLocale valuable.
- Check HTTP_ACCEPT_LANGUAGE HTTP header in getLocaleFromBrowser() of IMLocale class.
- Update TestDB.fp7 to add "total" field to the "invoice" table for the server side calculation sample and add
  tables ("saleslog", "item_master", "customer").
- Update TestDBSchemeForFMS.xlsx in "dist-docs" directory.
- Add the result of Hand-On Session 1 to Samples/Hands-on directory.